--- a/WpfApp3/WpfApp3.csproj
+++ b/WpfApp3/WpfApp3.csproj
@@ -51,6 +51,10 @@
       <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1003\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -104,6 +108,7 @@
       <DependentUpon>TravelDB.tt</DependentUpon>
     </Compile>
     <Compile Include="DB.cs" />
+    <Compile Include="DBFunctions.cs" />
     <Compile Include="DecryptClient.cs">
       <DependentUpon>TravelDB.tt</DependentUpon>
     </Compile>
